Create multi-org design
* Start page listing organisations and number of courses for each (some orgs may have 0?)
* Updated breadcrumb to use "Organisations" as root
* Removed top-level nav items as they are not per-org (and not really needed yet)

https://dfedigital.atlassian.net/browse/BATSA-401

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -8,7 +8,8 @@
   {% include "includes/phase_banner_beta.html" %}
   <div class="breadcrumbs">
     <ol>
-      <li><a href="/courses">Courses</a></li>
+      {% if data['multi-organisation'] %}<li><a href="/your-organisations">Organisations</a></li>{% endif %}
+      <li><a href="/courses">{{ data['training-provider-name']}}</a></li>
     </ol>
   </div>
 
