--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -5,7 +5,13 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <div class="breadcrumbs"></div>
+  <div class="breadcrumbs">
+    {% if data['multi-organisation'] %}
+    <ol>
+      <li><a href="/your-organisations">Organisations</a></li>
+    </ol>
+    {% endif %}
+  </div>
 
   {% if showMessage %}
   <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1" style="margin-bottom: 60px">
