--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -22,9 +22,9 @@
         </a>
 
         <ul id="proposition-links">
-          <li><a href="/schools">Schools</a></li>
-          <li><a href="/organisation">Organisation</a></li>
-          <li><a href="#">Sign out ({{ data['training-provider-name']}})</a></li>
+          <!-- <li><a href="/schools">Schools</a></li>
+          <li><a href="/organisation">Organisation</a></li> -->
+          <li><a href="#">Sign out (Jane Doe)</a></li>
         </ul>
       </nav>
     </div>
