--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -8,7 +8,7 @@
   <div class="breadcrumbs">
     {% if data['multi-organisation'] %}
     <ol>
-      <li><a href="/your-organisations">Organisations</a></li>
+      <li><a href="/">Organisations</a></li>
     </ol>
     {% endif %}
   </div>
