--- a/app/views/manage.html
+++ b/app/views/manage.html
@@ -13,7 +13,7 @@
 
 
       <ul class="list">
-        <li><a href="/courses">Courses</a></li>
+        <li><a href="/">{{ data['training-provider-name'] }}</a></li>
         <li><a href="/schools">Schools</a></li>
         <li><a href="/organisation">Organisation</a></li>
       </ul>
