--- a/app/views/course/qualification-options.html
+++ b/app/views/course/qualification-options.html
@@ -7,7 +7,7 @@
   {% include "includes/phase_banner_beta.html" %}
   <div class="breadcrumbs">
     <ol>
-      <li><a href="/courses">Courses</a></li>
+      <li><a href="/">{{ data['training-provider-name'] }}</a></li>
       <li><a href="/course/{{ accrediting.slug }}/{{ subject.slug or '/maths' }}">{{ subject.name or 'Maths' }} – {{ accrediting.name }}</a></li>
     </ol>
   </div>
