--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -14,7 +14,7 @@
     <div class="content">
       <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
       <nav id="proposition-menu">
-        <a href="/courses" id="proposition-name">
+        <a href="/" id="proposition-name">
           {# Set serviceName in config.js. Use a block to override on a page. #}
           {% block service_name %}
             {% if serviceName %} {{ serviceName }} {% endif %}
