--- a/app/views/request-access.html
+++ b/app/views/request-access.html
@@ -5,7 +5,7 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/courses" class="link-back">Back</a>
+  <a href="/organisation" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     Request access for someone
@@ -15,7 +15,7 @@
     <div class="column-two-thirds">
       <p class="lede">You can request a DfE Sign-in account for others who manage your courses.</p>
 
-      <form action="/courses/request" method="post">
+      <form action="/organisation/request" method="post">
         <legend>
           <h2 class="heading-medium">Request an account for:</h2>
         </legend>
