Make footer links match live

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -40,8 +40,20 @@
   {% if useAutoStoreData %}
     <ul>
       <li>
-        <a href="/prototype-admin/clear-data">Clear data</a>
+        <a href="#">Give feedback</a>
       </li>
+      <li>
+        <a href="#">Terms and conditions</a>
+      </li>
+      <li>
+        <a href="#">Privacy policy</a>
+      </li>
+      <li>
+        <a href="#">Cookies</a>
+      </li>
+      <!-- <li>
+        <a href="/prototype-admin/clear-data">Clear data</a>
+      </li> -->
     </ul>
   {% endif %}
 {% endblock %}
