Add docs on putting prototype into multi-org mode

--- a/app/views/history/multiple-organisations/index.html
+++ b/app/views/history/multiple-organisations/index.html
@@ -45,7 +45,9 @@
 
       <p>We’ve avoided adding supporting copy pending a round of research to see how well this is understood.</p>
 
-      <p><a href="https://dfedigital.atlassian.net/browse/BATSA-401">BATSA-401</a> and branch `<a href="https://github.com/fofr/manage-courses-prototype/tree/multi-org">multi-org</a>`</p>
+      <p><a href="https://dfedigital.atlassian.net/browse/BATSA-401">BATSA-401</a></p>
+
+      <p>When running the prototype, set `multi-organisation` to true in <a href="https://github.com/fofr/manage-courses-prototype/blob/master/lib/prototype_data.json#L2">prototype_data.json</a></p>
     </div>
   </div>
 
