Add design documentation around sign in

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -136,10 +136,12 @@
       <h3 class="heading-small">
         <a href="/history/sign-in-pre-register-user">Invite a user</a>
       </h3>
+      <p>This is the approach we’re taking for onboarding new users.</p>
 
       <h3 class="heading-small">
-        <a href="/history/sign-in-self-serve-registration">Self-serve registration</a>
+        <a href="/history/sign-in-self-serve-registration">User registers themself</a>
       </h3>
+      <p>The alternative is to provide self-serve registration, which we are not pursuing.</p>
 
       <h2 class="heading-large">Documentation</h2>
 
