--- a/app/views/history/sign-in-pre-register-user/index.html
+++ b/app/views/history/sign-in-pre-register-user/index.html
@@ -11,6 +11,14 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <p>The full journey from admin screens to a user completing sign up.</p>
+
+      <p>The invite email and the subsequent sign-in complete page provided by DfE Sign-in do not set up context and they leave users at a dead end. There is no easy route from DfE Sign in to ‘Publish teacher training courses’. Users reaching a dead end has been observed during onboarding of the first users.</p>
+    </div>
+  </div>
+
 {{ macros.screenshot('Admin adds new user', 'admin-adds-new-user', '/public/images/history/sign-in-pre-register-user/thumbnails/01-admin-adds-new-user.png', '/public/images/history/sign-in-pre-register-user/01-admin-adds-new-user.png', '') }}
 
 {{ macros.screenshot('Admin sets organisation', 'admin-sets-organisation', '/public/images/history/sign-in-pre-register-user/thumbnails/02-admin-sets-organisation.png', '/public/images/history/sign-in-pre-register-user/02-admin-sets-organisation.png', '') }}
