--- a/app/views/history/sign-in-self-serve-registration/index.html
+++ b/app/views/history/sign-in-self-serve-registration/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Sign-in: Self serve registration' %}
+{% set title = 'Sign-in: User registers themself' %}
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
