Add dates to documentation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -146,11 +146,11 @@
       <h2 class="heading-large">Documentation</h2>
 
       <h3 class="heading-small">
-        <a href="/history/imported-from-ucas">UCAS course information and ‘course folding’</a>
+        <a href="/history/imported-from-ucas">UCAS course information and ‘course folding’ (May 2018)</a>
       </h3>
 
       <h3 class="heading-small">
-        <a href="/history/what-is-a-course">What is a course?</a>
+        <a href="/history/what-is-a-course">What is a course? (May 2018)</a>
       </h3>
     </div>
   </div>
