Update copy for "About this provider"
Based on https://docs.google.com/document/d/1tjwnv0yqnLGqkE0iH1jVzUhjMTY7dNI2Sp20zn2pcNo/edit

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -102,7 +102,7 @@
               </h3>
               <a class="course-part-task-action" href="/course/{{ accrediting.slug }}/{{ subject.slug }}/about-this-provider">Edit</a>
               <dl class="course-part-tasks">
-                {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-about-organisation', 'About your organisation') }}
+                {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-about-organisation', 'Training with you') }}
 
                 {% if not accrediting.selfAccrediting %}
                   {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-about-accrediting-provider', 'About the accrediting provider (optional)') }}
