Remove required attribute from radios

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -24,7 +24,7 @@
   <div class="form-group">
   {% for field in fields %}
     <div class="multiple-choice" data-target="radio-{{ name }}-part-{{ loop.index }}-extra">
-      <input required
+      <input
         id="radio-{{ name }}-part-{{ loop.index }}"
         type="radio"
         name="{{ name }}"
