Record if provider is self accrediting

--- a/app/views/about-your-organisation.html
+++ b/app/views/about-your-organisation.html
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    {% if not accrediting.selfAccrediting %}
+    {% if not data['self_accrediting'] %}
     <div class="grid-row">
       <div class="column-two-thirds">
         {% if data['accreditors'].length > 1 %}
