--- a/app/views/history/about-your-organisation/index.html
+++ b/app/views/history/about-your-organisation/index.html
@@ -1,6 +1,6 @@
 
 {% extends "layout.html" %}
-{% set title = 'About your organisation' %}
+{% set title = 'Shared organisation details' %}
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
@@ -12,6 +12,22 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <p>The ‘About your organisation’ section is not unique to a course (<a href="/history/iteration-june-28#course">see old design</a>). The data is about the organisation itself. Represent this by moving the fields out of course pages and up to the organisation view.</p>
+
+      <p>To accommodate this new section, put courses and request access in tabs alongside it.</p>
+
+      <h2 class="heading-medium">Accrediting providers</h2>
+
+      <p>An organisation can have no accrediting provider, one provider, or many. Add a field to describe each accrediting provider (if there are any), and remove guidance around accrediting provider from the ‘Training with you’ field. Only one will show to applicants at any given time.</p>
+
+      <p>
+        <a href="https://dfedigital.atlassian.net/browse/BATSA-402">BATSA-402</a>
+      </p>
+    </div>
+  </div>
+
   {{ macros.screenshot('Organisation', 'organisation', '/public/images/history/about-your-organisation/thumbnails/01-organisation.png', '/public/images/history/about-your-organisation/01-organisation.png', '') }}
 
   {{ macros.screenshot('About your organisation', 'about-your-organisation', '/public/images/history/about-your-organisation/thumbnails/01-about-your-organisation.png', '/public/images/history/about-your-organisation/01-about-your-organisation.png', '') }}
@@ -21,8 +37,5 @@
   {{ macros.screenshot('With multiple accrediting providers', 'with-multiple-accrediting-providers', '/public/images/history/about-your-organisation/thumbnails/02-with-multiple-accrediting-providers.png', '/public/images/history/about-your-organisation/02-with-multiple-accrediting-providers.png', '') }}
 
   {{ macros.screenshot('Course without organisation section', 'course-without-organisation-section', '/public/images/history/about-your-organisation/thumbnails/03-course-without-organisation-section.png', '/public/images/history/about-your-organisation/03-course-without-organisation-section.png', '') }}
-
-  {{ macros.screenshot('Preview', 'preview', '/public/images/history/about-your-organisation/thumbnails/04-preview.png', '/public/images/history/about-your-organisation/04-preview.png', '') }}
-
 </main>
 {% endblock %}
