--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -18,6 +18,13 @@
       <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/about-your-organisation">Shared organisation details</a>
+      </h3>
+      <p>
+        Share organisation information between courses and split the organisation page across tabs.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/multiple-organisations">Managing multiple organisations</a>
       </h3>
       <p>
