--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -13,6 +13,11 @@ $path: "/public/images/";
 @import 'patterns/success-summary';
 @import 'patterns/character-counts';
 
+#proposition-links {
+  color: $white;
+  font-weight: bold;
+}
+
 // Related items
 // (These styles will be moved to GOV.UK elements, duplicating here for now.)
 .govuk-related-items {
