--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -22,9 +22,7 @@
         </a>
 
         <ul id="proposition-links">
-          <!-- <li><a href="/schools">Schools</a></li>
-          <li><a href="/organisation">Organisation</a></li> -->
-          <li><a href="#">Sign out (Jane Doe)</a></li>
+          <li><a href="#">Sign out</a> (<a href="#">Jane Doe</a>)</li>
         </ul>
       </nav>
     </div>
