--- a/app/views/request-access.html
+++ b/app/views/request-access.html
@@ -19,10 +19,10 @@
     {% endif %}
   {% endset %}
 
-  {{ macros.orgHeading('Request access for someone', message) }}
+  {{ macros.orgHeading('Request access for someone else', message) }}
 
   <h2 class="heading-large">
-    Request access for someone
+    Request access for someone else
   </h2>
 
   <div class="grid-row">
