Create a template workflow

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -35,6 +35,10 @@
 
 {% set tabs = [
     {
+      text: 'Course templates',
+      href: '/templates'
+    },
+    {
       text: 'Courses',
       href: '/'
     },
