--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -18,6 +18,11 @@ $path: "/public/images/";
   font-weight: bold;
 }
 
+.status {
+  background: $grey-3;
+  padding: 20px;
+}
+
 // Related items
 // (These styles will be moved to GOV.UK elements, duplicating here for now.)
 .govuk-related-items {
