Give table headings a black border
* Make the heading row stand out more
* Add helper style for grey text

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -18,6 +18,15 @@ $path: "/public/images/";
   font-weight: bold;
 }
 
+table thead th {
+  border-bottom-width: 2px;
+  border-color: $black;
+}
+
+.empty {
+  color: $grey-1;
+}
+
 .status {
   background: $grey-3;
   padding: 20px;
