--- a/app/views/template/apply.html
+++ b/app/views/template/apply.html
@@ -1,84 +1,75 @@
 {% extends "layout.html" %}
-{% set title = data['template-name'] %}
-{% block page_title %}{{ template }}{% endblock %}
+{% set title = 'Pick the courses that use this template' %}
+{% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/" class="link-back">Back to courses</a>
-
-  <h1 class="heading-xlarge">
-    <span class="heading-secondary">Template</span>
-    {{ title }}
-  </h1>
+  <a href="/template/fields" class="link-back">Back</a>
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <div class="course-parts course-parts--large add-top-margin">
-        <ul class="course-parts-items">
-          <li class="course-parts-item">
-            <h3 class="course-part-task">About this course</h3>
-
-            <a class="course-part-task-action" href="#">Edit</a>
-            <dl class="course-part-tasks">
-              <!-- <div>
-                <dt class="course-part-label">
-                  UCAS course codes
-                </dt>
-                <dd class="course-part-value">
-                  {% for course in data['ucasCourses'] %}
-                    {% if course.name == subject.name and course.accrediting == accrediting.name and course.options == option %}
-                      {{ course.programmeCode }} – <a href="/course/{{ accrediting.slug }}/{{ subject.slug }}/ucas/{{ course.programmeCode }}">View UCAS data</a><br />
-                      </tr>
-                    {% endif %}
-                  {% endfor %}
-                </dd>
-              </div> -->
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-about-this-course', 'About this course') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-fee', 'Fee for UK and EU students') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-fee-international', 'Fee for international students (optional)') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-duration', 'Course length') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-interview-process', 'Interview process (optional)') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-placement-school-policy', 'How school placements work') }}
-            </dl>
-          </li>
-          <li class="course-parts-item">
-            <h3 class="course-part-task">
-              Requirements and eligbility
-            </h3>
-            <a class="course-part-task-action" href="/course/{{ accrediting.slug }}/{{ subject.slug }}/requirements">Edit</a>
-
-            <dl class="course-part-tasks">
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-qualifications-required', 'Qualifications needed') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-personal-qualities', 'Personal qualities (optional)') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-other-requirements', 'Other requirements (optional)') }}
-            </dl>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="column-one-third">
-      <div class="status">
-        <p>This template is used by 0 courses.</p>
-
-        <ul class="list">
-          <li><a href="#">Choose the courses which use this template</a></li>
-          <li>
-            <a href="#">Rename template</a>
-          </li>
-          <li>
-            <a href="#">Delete template</a>
-          </li>
-        </ul>
-
-        <hr />
-
-        <p>Before courses using this template can be published DfE must approve it.</p>
-        <a href="#" class="button">Submit for approval</a>
-      </div>
+      <h1 class="heading-xlarge">
+        <span class="heading-secondary">Template: {{ data['template-name'] }}</span>
+        {{ title }}
+      </h1>
     </div>
   </div>
+
+  <form action="/template/apply" method="post">
+  {% for accrediting in data['accreditors'] %}
+    {% if data['accreditors'][0]['name'] != data['training-provider-name'] %}
+      <h3 class="heading-medium">
+        <span style="color: #777; font-weight: normal">Accrediting provider</span><br />
+        {{ accrediting.name }}
+      </h3>
+    {% endif %}
+
+    <div class="body-text">
+      <table class="ucas-info-table">
+        <thead>
+          <tr>
+            <th style="width: 30px"><input type="checkbox" value="{{ accrediting.slug }}-all" /></th>
+            <th class="code-col" style="width: 40px">Code</th>
+            <th class="subject-col" style="width: 30%">Subject</th>
+            <th class="type-col">Type</th>
+            <th class="template-col" style="width: 30%">Template</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% set subjectName = '' %}
+          {% for course in data['ucasCourses'] %}
+            {% if course.accrediting == accrediting.name %}
+              <tr>
+                <td>
+                  {{ data[course.progammeCode + '-template'] }}
+                  {% set checkboxName = course.programmeCode + '-template' %}
+                  <input type="checkbox" name="{{ checkboxName }}" value="yes" {{ checked(checkboxName, 'yes') }} />
+                </td>
+                <td>{{ course.programmeCode }}</td>
+                <td>{{ course.name }}</td>
+                <td>{{ course.options }}</td>
+                <td>
+                  {% if data[checkboxName] == 'yes' %}
+                    {{ data['template-name'] }}
+                  {% endif %}
+                </td>
+              </tr>
+              {% set subjectName = course.name %}
+            {% endif %}
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  {% endfor %}
+
+  <div class="form-group" style="margin-top: 60px">
+    <input type="submit" class="button" value="Save changes" />
+  </div>
+
+  <a href="#">Cancel changes</a>
+  </form>
 
 </main>
 
